lab1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service3-pod
  template:
    metadata:
      labels:
        app: service3-pod
    spec:
      containers:
        - image: service3:1.0
          name: service3-container
          ports:
            - containerPort: 8080 
          resources:
            limits:
              memory: "256M"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /api/service3
              port: 8080                    
            initialDelaySeconds: 3
            periodSeconds: 60
