lab1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service3-pod
