lab1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service3-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/service3
            pathType: "Prefix"
            backend:
              service:
                name: service3
                port:
                  number: 80S
